# litestar-attrs-partial-test

./: .gitignore  README.md  pyproject.toml
litestar_attrs_pr_test/: dev_server.py  example.py
litestar_attrs_pr_test/controllers/: user.py
litestar_attrs_pr_test/models/: user.py
litestar_attrs_pr_test/ref/: circular_import_fix.py
