[tool.poetry]
name = "litestar-attrs-pr-test"
version = "0.1.0"
description = ""
authors = ["redjax <jackenyon@gmail.com>"]
readme = "README.md"
packages = [{include = "litestar_attrs_pr_test"}]

[tool.poetry.dependencies]
python = "^3.10"

# Use Litestar PR for attrs testing: https://github.com/litestar-org/litestar/pull/1462
litestar = { git = "https://github.com/litestar-org/litestar.git", branch = "add-attrs-support-to-partial" }
faker = "^18.4.0"
requests-cache = "^1.0.1"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
stackprinter = "^0.2.10"
attrs = "^22.2.0"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.9"
aiosqlite = "^0.18.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
